--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,6 @@ p {
 }
 .button-head {
   color: var(--primary-white-color);
-  background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: Roboto, sans-serif;
@@ -505,7 +504,131 @@ b {
   background: rgba(255, 255, 255, 0.1);
   --color1: var(--primary-white-color);
 }
+.footer-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  margin-right: 12px;
+  background-color: #2f303a;
+  color: rgba(255, 255, 255, 0.6);
+  padding: 16px 15px;
+}
+.img-sent {
+  fill: currentColor;
+  margin-left: 10px;
+  vertical-align: middle;
+}
+/*div modal*/
+.backdrope {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity var(--time-animation) var(--time-function);
+}
+.modal-window {
+  position: absolute;
+  width: 528px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.button-close {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+}
+.img-close {
+  fill: currentColor;
+}
+.form-title {
+  margin-bottom: 12px;
+  color: var(--text-title-color);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+}
+.form-completed {
+  position: relative;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.form-lable {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+.form-input {
+  height: 40px;
+  padding: 12px 42px;
+}
+.img-form {
+  color: var(--text-title-color-);
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+}
+textarea {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+}
+.form-allow {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.checkbox {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  position: absolute;
+}
+.checkbox-label {
+  display: inline-block;
+}
+.checkbox-label::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--text-title-color);
+  vertical-align: middle;
+  margin-right: 8px;
+}
 
+.checkbox:checked + .checkbox-label::before {
+  background-color: var(--accent-text);
+  background-image: url("../imeges/icon-check.svg");
+  border-width: 0;
+}
+.form-link {
+  color: #2196f3;
 /*Portfolio*/
 .link-portfolio {
   color: var(--text-title-color);
