--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,9 @@ body {
   margin: 0;
   color: var(--main-text-color);
   background-color: #ffffff;
-
   font-family: "Raleway", sans-serif;
   font-family: "Roboto", sans-serif;
+  font-size: 14px;
 }
 a {
   text-decoration: none;
@@ -520,7 +520,7 @@ b {
   margin-left: 10px;
   vertical-align: middle;
 }
-/*div modal*/
+/* modal window*/
 .backdrope {
   position: fixed;
   top: 0px;
@@ -531,7 +531,11 @@ b {
   opacity: 1;
   transition: opacity var(--time-animation) var(--time-function);
 }
-.modal-window {
+.backdrope.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
   position: absolute;
   width: 528px;
   left: 50%;
@@ -570,6 +574,12 @@ b {
 }
 .img-close {
   fill: currentColor;
+}
+.button-close:hover,
+.button-close:focus,
+.form-input:focus + .img-form,
+textarea:focus + .img-form {
+  color: var(--accent-text);
 }
 .form-title {
   margin-bottom: 12px;
